--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -775,7 +775,7 @@ jobs:
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_REGION: {{aws_region}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: plan
     - task: upgrade
@@ -785,7 +785,7 @@ jobs:
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_REGION: {{aws_region}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: upgrade
   - aggregate:
@@ -796,7 +796,7 @@ jobs:
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_REGION: {{aws_region}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: latest-error
     - task: bbl-up
@@ -806,7 +806,7 @@ jobs:
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_REGION: {{aws_region}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: bbl-up
 
@@ -830,7 +830,7 @@ jobs:
         BBL_AZURE_CLIENT_ID: {{azure_client_id}}
         BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
         BBL_AZURE_REGION: {{azure_location}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: latest-error
     - task: bbl-up
@@ -842,7 +842,7 @@ jobs:
         BBL_AZURE_CLIENT_ID: {{azure_client_id}}
         BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
         BBL_AZURE_REGION: {{azure_location}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: bbl-up
     - task: plan
@@ -854,7 +854,7 @@ jobs:
         BBL_AZURE_CLIENT_ID: {{azure_client_id}}
         BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
         BBL_AZURE_REGION: {{azure_location}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: plan
 
@@ -886,7 +886,7 @@ jobs:
       BBL_VSPHERE_VCENTER_DISKS: {{vsphere_vcenter_disks}}
       BBL_VSPHERE_VCENTER_VMS: {{vsphere_vcenter_vms}}
       BBL_VSPHERE_VCENTER_TEMPLATES: {{vsphere_vcenter_templates}}
-      BBL_TEST_ENV_ID_PREFIX: bbl-ci
+      BBL_TEST_ENV_ID_PREFIX: bump-deployments
       BBL_TEST_PACKAGES: bbl
       RUN_TEST: bbl-up
 
@@ -919,7 +919,7 @@ jobs:
       BBL_OPENSTACK_DOMAIN: {{bbl_openstack_domain}}
       BBL_OPENSTACK_REGION: {{bbl_openstack_region}}
       BBL_OPENSTACK_PRIVATE_KEY: {{bbl_openstack_private_key}}
-      BBL_TEST_ENV_ID_PREFIX: bbl-ci
+      BBL_TEST_ENV_ID_PREFIX: bump-deployments
       BBL_TEST_PACKAGES: bbl
       RUN_TEST: bbl-up
 
@@ -942,7 +942,7 @@ jobs:
         BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
         BBL_GCP_REGION: {{bbl_gcp_region}}
         BBL_GCP_ZONE: {{bbl_gcp_zone}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
+        BBL_TEST_ENV_ID_PREFIX: bump-deployments
         BBL_TEST_PACKAGES: bbl
 
 - name: bbl-downstream-docker-image-bump-deployments
