use a plan patch in test bbl up
[#155239992]

Signed-off-by: Josh Zarrabi <jzarrabi@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -476,6 +476,8 @@ jobs:
     - put: test-bbl-state
       params:
         command: "up"
+        plan_patches:
+        - bosh-bootloader/plan-patches/cfcr-gcp
     - put: cfcr-bosh-deployment
       params:
         source_file: test-bbl-state/bdr-source-file
